--- a/asset/index.css
+++ b/asset/index.css
@@ -14,8 +14,12 @@
   100% {color:white; left:0px; top:0px;}
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 500px) {
     h3{
         font-size: 2.5rem !important;
+    }
+
+    img#imgProfil{
+        width: 280px ;
     }
 }
